k8s/redis-commander-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-commander
  name: redis-commander
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-commander
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: redis-commander
    spec:
      containers:
      - env:
        - name: REDIS_HOSTS
          value: 10.255.1.3
        image: rediscommander/redis-commander:latest
        imagePullPolicy: ""
        name: redis-commander
        ports:
        - containerPort: 8081
        resources: {}
      hostname: redis-commander
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
