k8s/striim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: striim
  name: striim
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: striim
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/striim_oracle_net: "true"
        io.kompose.service: striim
    spec:
      containers:
      - env:
        - name: STRIIM_ACCEPT_EULA
          value: Y
        image: custom-striim:latest
        imagePullPolicy: ""
        name: striim
        ports:
        - containerPort: 9080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
