k8s/oracle-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: oracle-database
  name: oracle-database
spec:
  ports:
  - name: "1521"
    port: 1521
    targetPort: 1521
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: oracle-database
status:
  loadBalancer: {}
