k8s/striim-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: striim
  name: striim
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 9080
  selector:
    io.kompose.service: striim
status:
  loadBalancer: {}
